bug squashing after bg overhaul

--- a/Themes/Blackberry-Flat/bbf_ombi.css
+++ b/Themes/Blackberry-Flat/bbf_ombi.css
@@ -10,7 +10,6 @@ body {
   -o-background-size: auto, cover;
   min-height: 100%;
   height: auto;
-  background: rgba(0, 0, 0, .0);
   font-family: Open Sans Semibold, Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 html {
